--- a/index.html
+++ b/index.html
@@ -357,25 +357,25 @@
       </div>
       <div class="flex flex-col-reverse lg:flex-row items-center gap-7">
         <div class="space-y-7 w-2/2 lg:w-1/2">
-          <div class="collapse collapse-plus bg-gray-100 ">
+          <div class="collapse collapse-plus bg-zinc-100 ">
             <input type="radio" name="my-accordion-3" checked="checked" />
             <div class="collapse-title font-semibold">Are application fee waivers available?</div>
             <div class="collapse-content text-sm">There are many variations of passages of Lorem Ipsum available, but
               the majority have suffered alteration in some form, by injected humour.</div>
           </div>
-          <div class="collapse collapse-plus bg-gray-100">
+          <div class="collapse collapse-plus bg-zinc-100">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title font-semibold">I forgot my password. What should I do?</div>
             <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and follow the
               instructions sent to your email.</div>
           </div>
-          <div class="collapse collapse-plus bg-gray-100">
+          <div class="collapse collapse-plus bg-zinc-100">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title font-semibold">How do I update my profile information?</div>
             <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.
             </div>
           </div>
-          <div class="collapse collapse-plus bg-gray-100">
+          <div class="collapse collapse-plus bg-zinc-100">
             <input type="radio" name="my-accordion-3" />
             <div class="collapse-title font-semibold">How do I update my profile information?</div>
             <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit Profile" to make changes.
@@ -399,27 +399,27 @@
       <div class="flex flex-col-reverse lg:flex-row items-center gap-7">
         <div class="grid grid-cols-1 lg:grid-cols-2 w-2/2 lg:w-1/2">
           <!-- address -->
-          <div class="text-center p-8 lg:p-12 w-full border border-gray-200 space-y-3">
+          <div class="text-center p-8 lg:p-12 w-full border border-gray-200 bg-zinc-100 space-y-3">
             <img class="mx-auto" src="images/location.png" alt="">
             <h2 class="font-bold">Address</h2>
             <p class="">A108 Adam Street,<br> New York, NY 535022</p>
           </div>
           <!-- call us -->
-          <div class="text-center p-8 lg:p-12 w-full border border-gray-200 space-y-3">
+          <div class="text-center p-8 lg:p-12 w-full border border-gray-200 bg-zinc-100 space-y-3">
             <img class="mx-auto" src="images/location.png" alt="">
             <h2>Call Us</h2>
             <p class="">+88 01750 00 00 00 <br>
               +88 01750 00 00 00</p>
           </div>
           <!-- email us -->
-          <div class="text-center p-8 lg:p-12 w-full border border-gray-200 space-y-3">
+          <div class="text-center p-8 lg:p-12 w-full border border-gray-200 bg-zinc-100 space-y-3">
             <img class="mx-auto" src="images/location.png" alt="">
             <h2>Email Us</h2>
             <p class="">info@gmail.com <br>
               info@gmail.com</p>
           </div>
           <!-- working hours -->
-          <div class="text-center p-8 lg:p-12 w-full border border-gray-200 space-y-3">
+          <div class="text-center p-8 lg:p-12 w-full border border-gray-200 bg-zinc-100 space-y-3">
             <img class="mx-auto" src="images/location.png" alt="">
             <h2>Working Hours</h2>
             <p class="">Mon-Fri: 9AM to 5PM <br>
@@ -427,12 +427,12 @@
           </div>
         </div>
         <fieldset class="fieldset space-y-3 rounded-box w-2/2 lg:w-1/2">
-          <input type="text" class="input w-full h-12 bg-zinc-200 border-none" placeholder="Your Name" />
-          <input type="email" class="input w-full h-12 bg-zinc-200 border-none" placeholder="Email" />
-          <input type="email" class="input w-full h-12 bg-zinc-200 border-none" placeholder="Your Email" />
-          <input type="text" class="input w-full h-12 bg-zinc-200 border-none" placeholder="Subject" />
+          <input type="text" class="input w-full h-12 bg-zinc-100 border-none" placeholder="Your Name" />
+          <input type="email" class="input w-full h-12 bg-zinc-100 border-none" placeholder="Email" />
+          <input type="email" class="input w-full h-12 bg-zinc-100 border-none" placeholder="Your Email" />
+          <input type="text" class="input w-full h-12 bg-zinc-100 border-none" placeholder="Subject" />
           <textarea placeholder="Your Message"
-            class="textarea textarea-md h-20 w-full bg-zinc-200 border-none"></textarea>
+            class="textarea textarea-md h-20 w-full bg-zinc-100 border-none"></textarea>
           <button class="btn bg-yellow-600 h-12 text-white">Send Message</button>
         </fieldset>
       </div>
