FAQ and footer added done

--- a/index.html
+++ b/index.html
@@ -407,21 +407,21 @@
           <!-- call us -->
           <div class="text-center p-8 lg:p-12 w-full border border-gray-200 bg-zinc-100 space-y-3">
             <img class="mx-auto" src="images/location.png" alt="">
-            <h2>Call Us</h2>
+            <h2 class="font-bold">Call Us</h2>
             <p class="">+88 01750 00 00 00 <br>
               +88 01750 00 00 00</p>
           </div>
           <!-- email us -->
           <div class="text-center p-8 lg:p-12 w-full border border-gray-200 bg-zinc-100 space-y-3">
             <img class="mx-auto" src="images/location.png" alt="">
-            <h2>Email Us</h2>
+            <h2 class="font-bold">Email Us</h2>
             <p class="">info@gmail.com <br>
               info@gmail.com</p>
           </div>
           <!-- working hours -->
           <div class="text-center p-8 lg:p-12 w-full border border-gray-200 bg-zinc-100 space-y-3">
             <img class="mx-auto" src="images/location.png" alt="">
-            <h2>Working Hours</h2>
+            <h2 class="font-bold">Working Hours</h2>
             <p class="">Mon-Fri: 9AM to 5PM <br>
               Sunday: 9AM to 1 PM</p>
           </div>
@@ -438,6 +438,39 @@
       </div>
     </section>
   </main>
+  <footer class="bg-black">
+    <div class="footer sm:footer-horizontal text-white p-10 lg:max-w-screen-lg mx-auto">
+      <div class="">
+        <a class="flex items-center text-lg lg:text-2xl font-bold font-eb-garamound"><img class="w-5 lg:w-7 mr-2"
+            src="images/business.png" alt="">Justice</a>
+        <p class=>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour.</p>
+      </div class="w-1/4">
+      <nav>
+        <h6 class="footer-title">Company</h6>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav>
+      <nav>
+        <h6 class="footer-title">Legal</h6>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+      <form>
+        <h6 class="footer-title">Newsletter</h6>
+        <fieldset class="w-80">
+          <label>Enter your email address</label>
+          <div class="join">
+            <input type="text" placeholder="username@site.com" class="input input-bordered join-item" />
+            <button class="btn btn-primary join-item">Subscribe</button>
+          </div>
+        </fieldset>
+      </form>
+    </div>
+  </footer>
 </body>
 
 </html>
